Previo a pruebas de contratacion

--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -80,7 +80,7 @@
 
                         <br/>
                         <br/>
-                        <p:commandButton value="Aceptar" action="#{estadisticasCensoController.enviarCorreos()}" /> 
+                        <p:commandButton value="Aceptar" action="#{proveedorController.resetDatosProveedor()}" /> 
                     </p:outputPanel>
                 </div>
             </div>
