Previo a pruebas de contratacion

--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -22,7 +22,7 @@
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="card">
-                    <p:outputPanel rendered="#{catalogosGeneralesController.isUsuarioRoot()}">
+                    <p:outputPanel rendered="#{catalogosGeneralesController.isUsuarioRafa()}">
                         <h1>
                             <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                             <p:spacer width="10" height="8"/>
@@ -50,10 +50,10 @@
 
                         <br/>
                         <br/>
-                        <p:commandButton value="Enviar" action="#{estadisticasCensoController.enviarCorreos()}" /> 
+                        <p:commandButton value="Enviar" /> 
                     </p:outputPanel>
 
-                    <p:outputPanel rendered="#{catalogosGeneralesController.isUsuarioRafa()}">
+                    <p:outputPanel rendered="#{catalogosGeneralesController.isUsuarioRoot()}">
                         <h1>
                             <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                             <p:spacer width="10" height="8"/>
@@ -73,9 +73,9 @@
                             <p:inputText value="#{proveedorController.numeroNit}"/>
 
                             <p:spacer/>
-                            <p:selectBooleanCheckbox value="#{proveedorController.resetUsuario}" itemLabel="Reset Activación Usuario"/>
+                            <p:selectBooleanCheckbox value="#{proveedorController.resetUsuario}" itemLabel="Reset Activación Usuario" style="width: 100%"/>
                             <p:spacer/>
-                            <p:selectBooleanCheckbox value="#{proveedorController.resetAceptacion}" itemLabel="Reset Aceptación de Terminos"/>
+                            <p:selectBooleanCheckbox value="#{proveedorController.resetAceptacion}" itemLabel="Reset Aceptación de Condiciones" style="width: 100%"/>
                         </p:panelGrid>
 
                         <br/>
