--- a/envio-web/src/main/webapp/mensaje.xhtml
+++ b/envio-web/src/main/webapp/mensaje.xhtml
@@ -69,6 +69,7 @@
                                                         <button class="ql-underline"></button>
                                                         <button class="ql-strike"></button>
                                                         <button class="ql-link"></button>
+                                                        <button class="ql-image"></button>
                                                     </span>
                                                     <span class="ql-formats">
                                                         <select class="ql-font"></select>
@@ -94,9 +95,12 @@
 
                                         </p:panelGrid>
                                         <br/>
-                                        <p:panelGrid columns="1" columnClasses="ui-g-12" style="margin: 0 auto; text-align: center; width: 360px;"  styleClass="form-group ui-panelgrid-blank" layout="grid">
+                                        <p:panelGrid columns="3" columnClasses="ui-g-5, ui-g-2, ui-g-5" style="margin: 0 auto; text-align: center; width: 360px;"  styleClass="form-group ui-panelgrid-blank" layout="grid">
                                             <p:commandButton id="btnEnviar" widgetVar="btnEnviar" value="Enviar" disabled="#{envioView.showUploadFile}"
                                                              action="#{envioView.validarFormulario()}" style="width: 200px;" />
+                                            <p:spacer/>
+                                            <p:commandButton id="btnCerrar" widgetVar="btnCerrar" value="Cerrar"
+                                                             style="width: 200px;" action="#{envioView.logout()}"/>
                                         </p:panelGrid>
 
                                         <p:panel visible="false">
